Name:          llvm-verifier
Version:       0.2.1
Author:        Galois Inc.
Maintainer:    jhendrix@galois.com, atomb@galois.com
Build-type:    Simple
Cabal-version: >= 1.8
Category:      Formal Methods
Synopsis:      Symbolic simulator for LLVM bytecode
License:       BSD3
License-file:  LICENSE

Flag build-library
  description: Build the LLVM-verifier library.
  default: True

Flag build-lss
  description: Build the LSS command-line tool
  default: True

flag build-utils
  description: Build auxiliary command-line executables
  default: True

flag static
  description: Statically link (only works on Linux)
  default: False

library
  if !flag(build-library)
    buildable: False

  build-depends:
      base >= 4 && < 5
    , base-compat >= 0.6.0
    , aig >= 0.2.3
    , ansi-wl-pprint
    , bytestring
    , containers >= 0.4.0.0
    , data-binary-ieee754 >= 0.4.2
    , directory
    , filepath
    , fingertree
    , haskeline >= 0.7
    , lens
    , llvm-pretty >= 0.5
    , llvm-pretty-bc-parser >= 0.1.3.1
    , mtl
    , saw-core
    , saw-core-aig
    , saw-core-sbv
    , sbv >= 4.0
    , split >= 0.2
    , transformers
    , transformers-compat
    , vector

  if !os(windows)
    build-depends: unix

  hs-source-dirs: src

  exposed-modules:
    Verifier.LLVM.Backend
    Verifier.LLVM.Backend.BitBlast
    Verifier.LLVM.Backend.SAW
    Verifier.LLVM.Backend.SAWImport

    Verifier.LLVM.Codebase
    Verifier.LLVM.Codebase.AST
    Verifier.LLVM.Codebase.DataLayout
    --Verifier.LLVM.Codebase.DebugInfo
    Verifier.LLVM.Codebase.LLVMContext
    Verifier.LLVM.Codebase.Translation

    Verifier.LLVM.Debugger
    Verifier.LLVM.Debugger.Grammar
    Verifier.LLVM.Debugger.FreeApp

    Verifier.LLVM.MemModel
    Verifier.LLVM.MemModel.Common
    Verifier.LLVM.MemModel.Geometry

    Verifier.LLVM.Overrides.Intrinsics
    Verifier.LLVM.Overrides.Libc
    Verifier.LLVM.Overrides.LSS
    Verifier.LLVM.Overrides.Printf

    Verifier.LLVM.Simulator
    Verifier.LLVM.Simulator.CursorTree
    Verifier.LLVM.Simulator.Internals
    Verifier.LLVM.Simulator.SimUtils

    Verifier.LLVM.Utils.Arithmetic
    Verifier.LLVM.Utils.PrettyPrint

  GHC-options: -O2 -Wall -Werror -fno-ignore-asserts -fno-spec-constr-count
  if impl(ghc == 8.0.1)
    ghc-options: -Wno-redundant-constraints
  GHC-prof-options: -auto-all -caf-all

executable lss
  if !flag(build-lss)
    buildable: False

  hs-source-dirs: lss

  main-is: Main_lss.hs

  other-modules:
    LSSImpl

  GHC-options: -O2 -Wall -fno-ignore-asserts -fno-spec-constr-count -with-rtsopts=-K32M
  GHC-prof-options: -auto-all -caf-all

  if flag(static)
    ld-options: -static -pthread

  build-depends:
      base >= 4
    , base-compat >= 0.6.0
    , abcBridge
    , ansi-wl-pprint
    , cmdargs >= 0.8
    , lens >= 3.9
    , llvm-pretty >= 0.5
    , llvm-pretty-bc-parser >= 0.1.2.2
    , llvm-verifier
    , mtl
    , parsec >= 2.1.0.1
    , vector

executable bcdump
  if !flag(build-utils)
    buildable: False

  main-is        : Main_bcdump.hs
  hs-source-dirs : bcdump

  GHC-options: -O2 -Wall -fno-ignore-asserts -fno-spec-constr-count
  GHC-prof-options: -auto-all -caf-all

  build-depends:
      base >= 4
    , base-compat >= 0.6.0
    , abcBridge
    , ansi-wl-pprint
    , bytestring
    , directory
    , filepath
    , llvm-pretty >= 0.5
    , llvm-pretty-bc-parser >= 0.1.2.2
    , llvm-verifier
    , process

test-suite test-llvm
  type:       exitcode-stdio-1.0

  main-is        : Tests.hs
  hs-source-dirs : test/src lss
  other-modules  :
    LSSImpl
    Tests.AES
    Tests.Aggregates
    Tests.BitMemModel
    Tests.Common
    Tests.Errors
    Tests.IO
    Tests.MemModel
    Tests.PrimOps
    Tests.Symbolic

  GHC-options: -O2 -Wall -fno-ignore-asserts -fno-spec-constr-count
  GHC-prof-options: -auto-all -caf-all

  build-depends:
      base >= 4
    , base-compat >= 0.6.0
    , cmdargs >= 0.8
    , llvm-verifier
    , QuickCheck >= 2.7
    , HUnit

    , tasty
    , tasty-ant-xml
    , tasty-hunit
    , tasty-quickcheck

    , abcBridge
    , aig
    , mtl
    , vector
    , filepath
    , random
    , haskeline >= 0.7
    , lens >= 3.9
    , llvm-pretty >= 0.5
    , llvm-pretty-bc-parser >= 0.1.2.2
    , tagged


  if !os(windows)
    build-depends: unix
